--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,8 +17,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
-        python-version: ["3.9"]
+        os: [ubuntu-latest, windows-latest]
+        python-version: ["3.9", "3.10"]
+        pytorch-version: ["1.11.0", "1.12.0"]
 
     steps:
     - name: Checkout
