--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
-exclude = venv
+exclude = venv docs
 # ignore = W503 # W503: Line break occurred before binary operator
 max-line-length = 100
