--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -1,6 +1,12 @@
 name: train-my-model
- on: [push]
- jobs:
+
+on:
+  push:
+    branches: [ master, main ]
+  pull_request:
+    branches: [ master, main ]
+
+jobs:
    run:
      runs-on: [ubuntu-latest]
      steps:
@@ -9,7 +15,7 @@ name: train-my-model
        - name: Train model
          run: |
            pip install -r requirements.txt  # install dependencies
-           python train_model_cml.py  # run training
+           python train.py  # run training
        - name: Write report
          env:
            # this authenticates that the right permissions are in place
