--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -15,6 +15,7 @@ jobs:
        - name: Train model
          run: |
            pip install -r requirements.txt  # install dependencies
+           wandb disabled
            python src/models/train_model_cml.py  # run training
        - name: Write report
          env:
