--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -13,9 +13,9 @@ jobs:
        - uses: actions/checkout@v2
        - uses: iterative/setup-cml@v1
 
-       - uses: iterative/setup-dvc@v1
-       - name: Get data
-         run: dvc pull
+       #- uses: iterative/setup-dvc@v1
+       #- name: Get data
+       #  run: dvc pull
 
        - name: Train model
          run: |
